--- a/style.css
+++ b/style.css
@@ -7,15 +7,10 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: Italianno;
-    font-size: 2em;
+    font-family: Italianno, serif;
+    font-size: 3em;
     font-weight: bold;
     /*box-sizing: border-box;*/
-}
-
-h1 {
-    position: center;
-
 }
 
 
@@ -23,13 +18,15 @@ form {
 
     padding: 5px 12px;
     text-align: center;
+
 }
 
 h1 {
-    font-size: 3.5em;
+    font-size: 4em;
     text-align: center;
     letter-spacing: 10px;
     margin: 0;
     padding: 0;
-    font-weight: bolder;
+    font-weight: bold;
+    text-shadow: 5px 15px 35px saddlebrown ;
 }
