--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Italianno');
 
-
 body {
     background-image: url("img/bg5.png");
     background-size: cover;
@@ -12,7 +11,6 @@ body {
     font-weight: bold;
     /*box-sizing: border-box;*/
 }
-
 
 form {
 
@@ -26,5 +24,5 @@ h1 {
     letter-spacing: 10px;
     margin: 0;
     padding: 0;
-    font-weight: bolder;
+    font-weight: bold;
 }
